Add exception and test

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     ],    
     "require": {
          "php": ">=7.0.0",
-         "doctrine/inflector": "^1.1"
+         "doctrine/inflector": "^1.1",
+         "uphp/exception": "^1.0"
     },
     "autoload": {
         "files": ["src/Inflection.php"]
